namespace Meetup.Modules.Meetings.Domain.Enums;

/// <summary>How an attendee row participates in a meeting.</summary>
public enum AttendeeStatus
{
    Attendee = 0,
    Waitlist = 1,
    Declined = 2
}
